# magicer

./: Cargo.toml  GEMINI.md  README.md  build.rs
.claude/: CLAUDE.md
.claude/agent-memory/tdd-implementer/: MEMORY.md  project_architecture.md  project_observability.md
.claude/agents/: spec-doc-writer.md  tdd-implementer.md
.claude/skills/canon-tdd/: SKILL.md
.claude/skills/design-master/: SKILL.md
.claude/skills/diataxis/: SKILL.md
.claude/skills/docs-first/: SKILL.md
.claude/skills/external-integration/: SKILL.md
.claude/skills/logging-principles/: SKILL.md
.claude/skills/rust-master/: SKILL.md
.cursor/rules/: convensions.mdc  design-conventions.mdc  documentation.mdc  implement-conventions.mdc
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  openapi-docs.yml
api/v1/: openapi.yaml
benches/: e2e_benchmark.rs  magic_analysis_benchmark.rs  validation_benchmark.rs
config/: config.toml
docs/: DOCUMENTATION_MAP.md  GITHUB_PAGES_SETUP.md  ORGANIZATION_SUMMARY.md  README.md
docs/explanation/: ARCHITECTURE.md  DESIGN_SUMMARY.md  LIBMAGIC_FFI.md
docs/how-to-guides/: DEPLOYMENT.md
docs/reference/: CLASS_DIAGRAMS_INDEX.md  CONFIG.md  DOCUMENTATION_POLICY.md  HTTP_SERVER.md  OBSERVABILITY.md  PROJECT_STRUCTURE.md  TESTING_STRATEGY.md
docs/reference/application/: analyze_content.md  analyze_path.md  dtos.md  errors.md  health_check.md
docs/reference/domain/: authentication_service.md  credentials.md  errors.md  file_path.md  filename.md  magic_repository.md  magic_result.md  mime_type.md  request_id.md
docs/reference/infrastructure/: basic_auth_service.md  libmagic_repository.md  sandbox.md  server_config.md  temp_file_handler.md
docs/reference/presentation/: app_state.md  health_handlers.md  magic_handlers.md  middleware.md  responses.md  router.md
docs/test_plans/: application_use_cases.md  configuration_loading.md  domain_entities.md  domain_value_objects.md  e2e_scenarios.md  error_message_integrity.md  infrastructure_services.md  observability.md  operational_and_integrity.md  refactoring_solid_split.md  server_config.md
src/: main.rs
src/application/: mod.rs
src/application/errors/: mod.rs
src/application/use_cases/: analyze_content.rs  analyze_path.rs  health_check.rs  mod.rs
src/domain/: mod.rs
src/domain/entities/: magic_result.rs  mod.rs
src/domain/errors/: mod.rs  storage_error.rs
src/domain/repositories/: magic_repository.rs  mod.rs
src/domain/services/: mod.rs  (+3 more)
src/infrastructure/: errors.rs  mod.rs
src/presentation/: mod.rs
tests/: e2e.rs  security.rs  unit.rs
tests/common/: fake_auth.rs  fake_temp_storage.rs  mod.rs
tests/e2e/: full_workflow_tests.rs
tests/security/: path_traversal_tests.rs
tests/test_plans/: application_use_cases.md  configuration_loading.md  domain_value_objects.md  e2e_scenarios.md  error_message_integrity.md  ffi_and_wrappers.md  infrastructure_services.md  operational_and_integrity.md  presentation_layer.md  refactoring_solid_split.md  security_and_performance.md
(+75 files in other folders)
