[package]
name = "magicer"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Linux File Magic API Server"

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }
hyper = { version = "1.0", features = ["full"] }

# Async Runtime
tokio = { version = "1.36", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Security
subtle = "2.5"
base64 = "0.22"
uuid = { version = "1.7", features = ["v4", "serde"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }

# Infrastructure
libc = "0.2"
bytes = "1.5"
futures-util = "0.3"
libloading = "0.8"

[dev-dependencies]
axum-test = "14.0"
proptest = "1.4"
mockall = "0.12"
criterion = { version = "0.5", features = ["async_tokio"] }
tokio-test = "0.4"
tempfile = "3.10"
glob = "0.3"
serial_test = "3.0"

[[bench]]
name = "validation_benchmark"
harness = false

[[bench]]
name = "magic_analysis_benchmark"
harness = false

[[bench]]
name = "e2e_benchmark"
harness = false

[build-dependencies]
num_cpus = "1.16"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
