[package]
name = "magicer"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Linux File Magic API Server"

[dependencies]
# Web Framework
axum = { version = "0.8.8", features = ["macros"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["full"] }

# Async Runtime
tokio = { version = "1.43", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.0.1+spec-1.1.0"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Security
subtle = "2.6"
base64 = "0.22"
uuid = { version = "1.12", features = ["v4", "serde"] }
rand = "0.10.0"
chrono = { version = "0.4", features = ["serde"] }

# Infrastructure
libc = "0.2"
bytes = "1.9"
futures-util = "0.3"
rlimit = "0.11.0"
socket2 = "0.6.2"
async-trait = "0.1"

[dev-dependencies]
axum-test = "18.7.0"
criterion = { version = "0.8.2", features = ["async_tokio"] }
tokio-test = "0.4"
tempfile = "3.15"
glob = "0.3"
serial_test = "3.2"

[[bench]]
name = "validation_benchmark"
harness = false

[[bench]]
name = "magic_analysis_benchmark"
harness = false

[[bench]]
name = "e2e_benchmark"
harness = false

[build-dependencies]
cc = "1.2.56"
num_cpus = "1.17"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
